  Added : New internal property - -DpopWindowWithoutMainFrame in quiet mode, default value is false,
          see startup.properties file for more details
  Added : New internal property - -DcharEncodingForPropertiesFiles defines character encoding for properties files,
          see startup.properties file for more details
  Added : New file start.bat in FRD directory to allow launch FRD without frd.exe
  Changed : User preferences dialog opens faster
  Thanks to all bug reporters:
  Fixed : Updated JTattoo look and feel, which fixes a bug where the main window shows over the taskbar
  Fixed : Updated Quaqua look and feel, which fixes certain regressions in 0.86 on Mac OS X
  Fixed : Unable to deselect "Use proxy list" - regression in 0.86
  Fixed : Unable to view dialog for settings of selected files - regression in 0.86
  Fixed : NullpointerException fix for PasswordAuthentication
  Fixed : Ugly Pause button on Mac version
  Fixed : Rare case - couldn't detect plugins on start - regression in 0.86

30th October 2011 - FreeRapid Downloader 0.86
  Added : Support for Portuguese and Simplified Chinese languages - thanks to all translators!
  Added : Quiet Mode - don't let captcha dialogs bother you anymore while watching videos!
  Added : If the same file is downloaded from multiple sources, duplicates are automatically skipped
  Added : Support for preventing standby while downloading
  Added : Support for using system recycle bin for deleting files
  Added : Support for new search engine - http://wuploadsearch.com
  Changed : Speed up startup time
  Changed : Internal - NirCmd is not used anymore for native Windows actions
  Changed : Internal - Updated BetterSwingApplicationFramework to v1.9.3 snapshot
  Changed : Internal - Updated jna, mina, and commons-codec libraries to their latest versions
  Changed : Internal - Updated look and feel libraries
  Fixed : Java 7 compatibility issues

1st January 2011 - FreeRapid Downloader 0.85 Update 1